fix overflow on mobile

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,8 +4,9 @@
   box-sizing: border-box;
 }
 .main2 {
-  overflow: visible;
+  overflow:hidden;
   max-height: 35vh;
+  max-width: 100vw;
   display: grid;
   place-items: center;
 }
